include/Win32/CUDA.Import.hpp

struct DECLSPEC_DRECORD TCUarray
{
};
struct TcudaFuncAttributes;
struct TCUDA_MEMCPY2D;
struct TCUDA_MEMCPY3D;
struct TCUDA_ARRAY_DESCRIPTOR;
struct TCUDA_ARRAY3D_DESCRIPTOR;
//-- type declarations -------------------------------------------------------
typedef void * TCUdeviceptr;
typedef TCUarray *PCUarray;
enum DECLSPEC_DENUM TCUgraphicsMapResourceFlags : unsigned char { CU_GRAPHICS_MAP_RESOURCE_FLAGS_NONE, CU_GRAPHICS_MAP_RESOURCE_FLAGS_READ_ONLY, CU_GRAPHICS_MAP_RESOURCE_FLAGS_WRITE_DISCARD };
enum DECLSPEC_DENUM TCUarray_cubemap_face : unsigned char { CU_CUBEMAP_FACE_POSITIVE_X, CU_CUBEMAP_FACE_NEGATIVE_X, CU_CUBEMAP_FACE_POSITIVE_Y, CU_CUBEMAP_FACE_NEGATIVE_Y, CU_CUBEMAP_FACE_POSITIVE_Z, CU_CUBEMAP_FACE_NEGATIVE_Z };
struct DECLSPEC_DRECORD TcudaFuncAttributes
{
public:
	NativeUInt sharedSizeBytes;
	NativeUInt constSizeBytes;
	NativeUInt localSizeBytes;
	int maxThreadsPerBlock;
	int numRegs;
	int ptxVersion;
	int binaryVersion;
	System::StaticArray<int, 6> __cudaReserved;
};
enum DECLSPEC_DENUM TcudaFuncCache : unsigned char { cudaFuncCachePreferNone, cudaFuncCachePreferShared, cudaFuncCachePreferL1 };
typedef unsigned TCUresult;
typedef TCUDA_MEMCPY2D *PCUDA_MEMCPY2D;
struct DECLSPEC_DRECORD TCUDA_MEMCPY2D
{
public:
	unsigned srcXInBytes;
	unsigned srcY;
	TCUmemorytype srcMemoryType;
	void *srcHost;
	void *srcDevice;
	TCUarray *srcArray;
	unsigned srcPitch;
	unsigned dstXInBytes;
	unsigned dstY;
	TCUmemorytype dstMemoryType;
	void *dstHost;
	void *dstDevice;
	TCUarray *dstArray;
	unsigned dstPitch;
	unsigned WidthInBytes;
	unsigned Height;
};
struct DECLSPEC_DRECORD TCUDA_MEMCPY3D
{
public:
	unsigned srcXInBytes;
	unsigned srcY;
	unsigned srcZ;
	unsigned srcLOD;
	TCUmemorytype srcMemoryType;
	void *srcHost;
	void *srcDevice;
	TCUarray *srcArray;
	void *reserved0;
	unsigned srcPitch;
	unsigned srcHeight;
	unsigned dstXInBytes;
	unsigned dstY;
	unsigned dstZ;
	unsigned dstLOD;
	TCUmemorytype dstMemoryType;
	void *dstHost;
	void *dstDevice;
	TCUarray *dstArray;
	void *reserved1;
	unsigned dstPitch;
	unsigned dstHeight;
	unsigned WidthInBytes;
	unsigned Height;
	unsigned Depth;
};
typedef TCUDA_ARRAY_DESCRIPTOR *PCUDA_ARRAY_DESCRIPTOR;
struct DECLSPEC_DRECORD TCUDA_ARRAY_DESCRIPTOR
{
public:
	unsigned Width;
	unsigned Height;
	TCUarray_format Format;
	unsigned NumChannels;
};
struct DECLSPEC_DRECORD TCUDA_ARRAY3D_DESCRIPTOR
{
public:
	unsigned Width;
	unsigned Height;
	unsigned Depth;
	TCUarray_format Format;
	unsigned NumChannels;
	unsigned Flags;
};
enum DECLSPEC_DENUM TCUGLmap_flags : unsigned char { CU_GL_MAP_RESOURCE_FLAGS_NONE, CU_GL_MAP_RESOURCE_FLAGS_READ_ONLY, CU_GL_MAP_RESOURCE_FLAGS_WRITE_DISCARD };
typedef System::StaticArray<unsigned, 3> TDim3;
typedef void * HGPUNV;
typedef TCUresult __stdcall (*TcuMemHostAlloc)(void * &pp, unsigned bytesize, unsigned Flags);
typedef TCUresult __stdcall (*TcuMemHostGetDevicePointer)(void * &pdptr, void * p, unsigned Flags);
typedef TCUresult __stdcall (*TcuTexRefSetArray)(PCUtexref hTexRef, PCUarray hArray, unsigned Flags);
typedef TCUresult __stdcall (*TcuTexRefSetFlags)(PCUtexref hTexRef, unsigned Flags);
extern DELPHI_PACKAGE TCUresult CUDA_SUCCESS;
extern DELPHI_PACKAGE TcuMemHostAlloc cuMemHostAlloc;
extern DELPHI_PACKAGE TcuMemHostGetDevicePointer cuMemHostGetDevicePointer;
extern DELPHI_PACKAGE TcuTexRefSetArray cuTexRefSetArray;
extern DELPHI_PACKAGE TcuTexRefSetFlags cuTexRefSetFlags;