Source/CUDA.Import.pas


  // Flags for mapping and unmapping interop resources
  TCUgraphicsMapResourceFlags =
    (CU_GRAPHICS_MAP_RESOURCE_FLAGS_NONE = $00000000,
    CU_GRAPHICS_MAP_RESOURCE_FLAGS_READ_ONLY = $00000001,
    CU_GRAPHICS_MAP_RESOURCE_FLAGS_WRITE_DISCARD = $00000002);

  // Array indices for cube faces
  TCUarray_cubemap_face = (
    // Positive X face of cubemap
	CU_CUBEMAP_FACE_POSITIVE_X = $00000000,
    // Negative X face of cubemap
    CU_CUBEMAP_FACE_NEGATIVE_X = $00000001,
    // Positive Y face of cubemap
    CU_CUBEMAP_FACE_POSITIVE_Y = $00000002,
    // Negative Y face of cubemap
    CU_CUBEMAP_FACE_NEGATIVE_Y = $00000003,
    // Positive Z face of cubemap
    CU_CUBEMAP_FACE_POSITIVE_Z = $00000004,
    // Negative Z face of cubemap
    CU_CUBEMAP_FACE_NEGATIVE_Z = $00000005
    );

  (*
    * CUDA function attributes
  *)

  TcudaFuncAttributes = record
    // Size of shared memory in bytes
    sharedSizeBytes: NativeUInt;
	// Size of constant memory in bytes
    constSizeBytes: NativeUInt;
    // Size of local memory in bytes
    localSizeBytes: NativeUInt;
    // Maximum number of threads per block
    maxThreadsPerBlock: Integer;
    // Number of registers used
    numRegs: Integer;
    
    (* \brief PTX virtual architecture version for which the function was
      *  compiled. This value is the major PTX version * 10 + the minor PTX
      *  version, so a PTX version 1.3 function would return the value 13.
      *  For device emulation kernels, this is set to 9999. *)
    ptxVersion: Integer;
    (* * \brief Binary architecture version for which the function was compiled.
      *  This value is the major binary version * 10 + the minor binary version,
      *  so a binary version 1.3 function would return the value 13.
      *  For device emulation kernels, this is set to 9999. *)
    binaryVersion: Integer;
    __cudaReserved: array [0 .. 5] of Integer;
  end;

  (* *
    * CUDA function cache configurations
  *)

  TcudaFuncCache = (
    // Default function cache configuration, no preference
	cudaFuncCachePreferNone = 0,
    // Prefer larger shared memory and smaller L1 cache
    cudaFuncCachePreferShared = 1,
    // Prefer larger L1 cache and smaller shared memory
    cudaFuncCachePreferL1 = 2
    );

  // ************************************
  // **
  // **    Error codes
  // **
  // ***********************************/

  // Error codes

  TCUresult = type Cardinal;

const
  CUDA_SUCCESS: TCUresult = 0;          /// < No errors
  CUDA_ERROR_INVALID_VALUE = 1;         /// < Invalid value
  CUDA_ERROR_OUT_OF_MEMORY = 2;         /// < Out of memory
  CUDA_ERROR_NOT_INITIALIZED = 3;       /// < Driver not initialized
  CUDA_ERROR_DEINITIALIZED = 4;         /// < Driver deinitialized

  CUDA_ERROR_NO_DEVICE = 100;           /// < No CUDA-capable device available
  CUDA_ERROR_INVALID_DEVICE = 101;      /// < Invalid device

  CUDA_ERROR_INVALID_IMAGE = 200;       /// < Invalid kernel image
  CUDA_ERROR_INVALID_CONTEXT = 201;     /// < Invalid context
  CUDA_ERROR_CONTEXT_ALREADY_CURRENT = 202;  /// < Context already current
  CUDA_ERROR_MAP_FAILED = 205;          /// < Map failed
  CUDA_ERROR_UNMAP_FAILED = 206;        /// < Unmap failed
  CUDA_ERROR_ARRAY_IS_MAPPED = 207;     /// < Array is mapped
  CUDA_ERROR_ALREADY_MAPPED = 208;      /// < Already mapped
  CUDA_ERROR_NO_BINARY_FOR_GPU = 209;   /// < No binary for GPU
  CUDA_ERROR_ALREADY_ACQUIRED = 210;    /// < Already acquired
  CUDA_ERROR_NOT_MAPPED = 211;          /// < Not mapped
  CUDA_ERROR_NOT_MAPPED_AS_ARRAY = 212;    /// < Mapped resource not available for access as an array
  CUDA_ERROR_NOT_MAPPED_AS_POINTER = 213;  /// < Mapped resource not available for access as a pointer

  CUDA_ERROR_INVALID_SOURCE = 300;       /// < Invalid source
  CUDA_ERROR_FILE_NOT_FOUND = 301;       /// < File not found

  CUDA_ERROR_INVALID_HANDLE = 400;       /// < Invalid handle

  CUDA_ERROR_NOT_FOUND = 500;            /// < Not found

  CUDA_ERROR_NOT_READY = 600;            /// < CUDA not ready

  CUDA_ERROR_LAUNCH_FAILED = 700;           /// < Launch failed
  CUDA_ERROR_LAUNCH_OUT_OF_RESOURCES = 701; /// < Launch exceeded resources
  CUDA_ERROR_LAUNCH_TIMEOUT = 702;          /// < Launch exceeded timeout
  CUDA_ERROR_LAUNCH_INCOMPATIBLE_TEXTURING = 703; /// < Launch with incompatible texturing

  CUDA_ERROR_POINTER_IS_64BIT = 800;        /// < Attempted to retrieve 64-bit pointer via 32-bit API function
  CUDA_ERROR_SIZE_IS_64BIT = 801;           /// < Attempted to retrieve 64-bit size via 32-bit API function

  CUDA_ERROR_UNKNOWN = 999;                 /// < Unknown error

const

  { * If set, host memory is portable between CUDA contexts.
    * Flag for ::cuMemHostAlloc() }
  CU_MEMHOSTALLOC_PORTABLE = $01;

  { * If set, host memory is mapped into CUDA address space and
    * ::cuMemHostGetDevicePointer() may be called on the host pointer.
    * Flag for ::cuMemHostAlloc() }
  CU_MEMHOSTALLOC_DEVICEMAP = $02;

  { * If set, host memory is allocated as write-combined - fast to write,
    * faster to DMA, slow to read except via SSE4 streaming load instruction
    * (MOVNTDQA).
    * Flag for ::cuMemHostAlloc() }
  CU_MEMHOSTALLOC_WRITECOMBINED = $04;

  // 2D memory copy parameters
type

  PCUDA_MEMCPY2D = ^TCUDA_MEMCPY2D;

  TCUDA_MEMCPY2D = record
    srcXInBytes,       /// < Source X in bytes
    srcY: Cardinal;    /// < Source Y

    srcMemoryType: TCUmemorytype;  /// < Source memory type (host, device, array)
    srcHost: Pointer;              /// < Source host pointer
    srcDevice: TCUdeviceptr;       /// < Source device pointer
    srcArray: PCUarray;            /// < Source array reference
    srcPitch: Cardinal;            /// < Source pitch (ignored when src is array)

    dstXInBytes,                   /// < Destination X in bytes
    dstY: Cardinal;                /// < Destination Y
    dstMemoryType: TCUmemorytype;  /// < Destination memory type (host, device, array)
    dstHost: Pointer;              /// < Destination host pointer
    dstDevice: TCUdeviceptr;       /// < Destination device pointer
    dstArray: PCUarray;            /// < Destination array reference
    dstPitch: Cardinal;            /// < Destination pitch (ignored when dst is array)

    WidthInBytes: Cardinal;        /// < Width of 2D memory copy in bytes
    Height: Cardinal;              /// < Height of 2D memory copy
  end;

  // 3D memory copy parameters
  TCUDA_MEMCPY3D = record
    srcXInBytes,                        /// < Source X in bytes
    srcY,                               /// < Source Y
    srcZ: Cardinal;                     /// < Source Z
    srcLOD: Cardinal;                   /// < Source LOD
    srcMemoryType: TCUmemorytype;       /// < Source memory type (host, device, array)
    srcHost: Pointer;                   /// < Source host pointer
    srcDevice: TCUdeviceptr;            /// < Source device pointer
    srcArray: PCUarray;                 /// < Source array reference
    reserved0: Pointer;                 /// < Must be NULL
    srcPitch: Cardinal;                 /// < Source pitch (ignored when src is array)
    srcHeight: Cardinal;                /// < Source height (ignored when src is array; may be 0 if Depth==1)

    dstXInBytes,                        /// < Destination X in bytes
    dstY,                               /// < Destination Y
    dstZ: Cardinal;                     /// < Destination Z
    dstLOD: Cardinal;                   /// < Destination LOD
    dstMemoryType: TCUmemorytype;       /// < Destination memory type (host, device, array)
    dstHost: Pointer;                   /// < Destination host pointer
    dstDevice: TCUdeviceptr;            /// < Destination device pointer
    dstArray: PCUarray;                 /// < Destination array reference
    reserved1: Pointer;                 /// < Must be NULL
    dstPitch: Cardinal;                 /// < Destination pitch (ignored when dst is array)
    dstHeight: Cardinal;                /// < Destination height (ignored when dst is array; may be 0 if Depth==1)

    WidthInBytes: Cardinal;             /// < Width of 3D memory copy in bytes
    Height: Cardinal;                   /// < Height of 3D memory copy
    Depth: Cardinal;                    /// < Depth of 3D memory copy
  end;

  // Array descriptor
  PCUDA_ARRAY_DESCRIPTOR = ^TCUDA_ARRAY_DESCRIPTOR;

  TCUDA_ARRAY_DESCRIPTOR = record
    Width: Cardinal;                    /// < Width of array
    Height: Cardinal;                   /// < Height of array
    Format: TCUarray_format;            /// < Array format
    NumChannels: Cardinal;              /// < Channels per array element
  end;

  // 3D array descriptor
  TCUDA_ARRAY3D_DESCRIPTOR = record
    Width: Cardinal;                     /// < Width of 3D array
    Height: Cardinal;                    /// < Height of 3D array
    Depth: Cardinal;                     /// < Depth of 3D array
    Format: TCUarray_format;             /// < Array format
    NumChannels: Cardinal;               /// < Channels per array element
    Flags: Cardinal;                     /// < Flags
  end;

  // Flags to map or unmap a resource
  TCUGLmap_flags = (CU_GL_MAP_RESOURCE_FLAGS_NONE,
    CU_GL_MAP_RESOURCE_FLAGS_READ_ONLY, CU_GL_MAP_RESOURCE_FLAGS_WRITE_DISCARD);

const
  { * Override the texref format with a format inferred from the array.
    * Flag for ::cuTexRefSetArray() }
  CU_TRSA_OVERRIDE_FORMAT = $01;

  { * Read the texture as integers rather than promoting the values to floats
    * in the range [0,1].
    * Flag for ::cuTexRefSetFlags() }
  CU_TRSF_READ_AS_INTEGER = $01;

  { * Use normalized texture coordinates in the range [0,1) instead of [0,dim).
    * Flag for ::cuTexRefSetFlags() }
  CU_TRSF_NORMALIZED_COORDINATES = $02;

  { * For texture references loaded into the module, use default texunit from
    * texture reference. }
  CU_PARAM_TR_DEFAULT = -1;

type
  TDim3 = array [0 .. 2] of LongWord;

{$IFDEF MSWINDOWS}
type
  HGPUNV = Pointer;
{$ENDIF}
